---------------------------------------------------------------------
Release ?
---------------------------------------------------------------------
NEW FEATURES:
*  Added luga.data.region.setUp({
   autoregister: true|false
})
* luga.data.ChildXmlDataSet is now available

NOTES:
* Documentation is now a SPA

CHANGES:
* Luga CSI is not part of the project anymore
* luga.data.Detailset: Renamed config.dataSet to config.masterDataSet
* jQuery updated to 2.2.4

BUG FIXES:
*

KNOWN ISSUES:
* IE9 and CORS: http://stackoverflow.com/questions/10232017/ie9-jquery-ajax-with-cors-returns-access-is-denied
* Proper release notes started only after release 0.5 :-)

---------------------------------------------------------------------
Release 0.5
---------------------------------------------------------------------