@@ -8,17 +8,21 @@
 	<input type="submit" value="Submit"/>
 </form>
 
-<form id="customAttributes"
-	  data-lugajax-action="customAction"
-	  data-lugajax-method="DELETE"
-	  data-lugajax-timeout="20000"
-	  data-lugajax-success="ajaxFormHandlers.customSuccessHandler"
-	  data-lugajax-successmsg="Test success"
-	  data-lugajax-error="ajaxFormHandlers.customErrorHandler"
-	  data-lugajax-errormsg="Test error"
-	  data-lugajax-before="ajaxFormHandlers.customBefore"
-	  data-lugajax-after="ajaxFormHandlers.customAfter",
-	  data-lugajax-form="true">
-	<input type="text" name="myName" />
-	<input type="submit" value="Submit"/>
-</form>
+<div class="container">
+
+	<form id="customAttributes"
+		  data-lugajax-action="customAction"
+		  data-lugajax-method="DELETE"
+		  data-lugajax-timeout="20000"
+		  data-lugajax-success="ajaxFormHandlers.customSuccessHandler"
+		  data-lugajax-successmsg="Test success"
+		  data-lugajax-error="ajaxFormHandlers.customErrorHandler"
+		  data-lugajax-errormsg="Test error"
+		  data-lugajax-before="ajaxFormHandlers.customBefore"
+		  data-lugajax-after="ajaxFormHandlers.customAfter",
+		  data-lugajax-form="true">
+		<input type="text" name="myName" />
+		<input type="submit" value="Submit"/>
+	</form>
+
+</div>
